--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>Dotru</title>
   <base href="/dotru/">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, maximum-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
